...
        <DemoContent key={i} color={DARK_BLUE} />
      ))}
      <Button text={`Add Content (${contentCount})`} onPress={addContent} />
      {contentCount > 0 && <Button text="Remove Content" onPress={removeContent} />}
      <ButtonGroup>
        <Button text="Peek" onPress={() => resize(0)} />
        <Button text="Auto" onPress={() => resize(1)} />
        <Button text="Large" onPress={() => resize(2)} />
      </ButtonGroup>
      <ButtonGroup>
        <Button text="Show Toast" onPress={showToast} />
        <Button text="Show Dialog" onPress={() => setDialogVisible(true)} />
      </ButtonGroup>
      <TrueSheetPeek />
...
